<resources>
    <string name="app_name">BalanceverAttempt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_fragment">Your <b>balanced</b> daily routine.\nYour new <b>free time ideas.</b></string>
<!--    <string name="facebook_app_id">277639433401434</string>-->
<!--    <string name="fb_login_protocol_scheme">fb277639433401434</string>-->

    <string name="btn_google_login">Google</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="full_name_edit_text">Full Name</string>
    <string name="terms_service_string">By creating an account you agree to our\n<u> Terms of Service and Privacy Policy</u></string>
    <string name="success">Created Account Successfully</string>
    <string name="failure">Fatal Error</string>
    <string name="intro_paragraph">Balancever can help structuring a work day effectively, provide suggestions for what to do during breaks and free time and display a work-life balance score.</string>
    <string name="home_nav_item"><li> HOME</li></string>
    <string name="signin_nav_item"><li> SIGN IN</li></string>
    <string name="signup_nav_item"><li> SIGN UP</li></string>
    <string name="contact_nav_item"><li> CONTACT</li></string>
    <string name="logged_in_intro">With Balancever you can generate a structure for your day, boost your efficiency and avoid long working hours.\nYou can select diverse activities for your break and free time.</string>
    <string name="ideas_activities"><![CDATA[IDEAS & ACTIVITIES]]></string>
    <string name="structure_your_day">STRUCTURE YOUR DAY</string>
    <string name="view_schedule">VIEW SCHEDULE</string>
    <string name="contact">CONTACT</string>
    <string name="explore_activities">EXPLORE ACTIVITIES</string>
    <string name="share_your_schedule">SHARE YOUR SCHEDULE</string>
    <string name="check_your_score">CHECK YOUR SCORE</string>
    <string name="copy_schedule">COPY SCHEDULE</string>
    <string-array name="spinnerItems">
        <item>Appointment</item>
        <item>Sleep Time</item>
        <item>Break</item>
    </string-array>>

    <string name="time_12am">12:00 am</string>
    <string name="time_1am">1:00 am</string>
    <string name="time_2am">2:00 am</string>
    <string name="time_3am">3:00 am</string>
    <string name="time_4am">4:00 am</string>
    <string name="time_5am">5:00 am</string>
    <string name="time_6am">6:00 am</string>
    <string name="time_7am">7:00 am</string>
    <string name="time_8am">8:00 am</string>
    <string name="time_9am">9:00 am</string>
    <string name="time_10am">10:00 am</string>
    <string name="time_11am">11:00 am</string>
    <string name="time_12pm">12:00 pm</string>
    <string name="time_13pm">13:00 pm</string>
    <string name="time_14pm">14:00 pm</string>
    <string name="time_15pm">15:00 pm</string>
    <string name="time_16pm">16:00 pm</string>
    <string name="time_17pm">17:00 pm</string>
    <string name="time_18pm">18:00 pm</string>
    <string name="time_19pm">19:00 pm</string>
    <string name="time_20pm">20:00 pm</string>
    <string name="time_21pm">21:00 pm</string>
    <string name="time_22pm">22:00 pm</string>
    <string name="time_23pm">23:00 pm</string>
    <string name="time_24pm">24:00 pm</string>
    <string name="current_day_date">5 June, 2020</string>
</resources>
