<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logged_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoggedInNav.LoggedInActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/logged_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_icon_colored" />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/logged_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/logged_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/homepage_background"
        app:headerLayout="@layout/nav_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/structureYourDaytv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/structure_your_day" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <TextView
                android:id="@+id/viewScheduletv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/view_schedule" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <TextView
                android:id="@+id/copyScheduletv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/copy_schedule" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <TextView
                android:id="@+id/checkYourScoretv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/check_your_score" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <TextView
                android:id="@+id/shareYourScheduletv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/share_your_schedule" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <TextView
                android:id="@+id/exploreActivitiestv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/explore_activities" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <TextView
                android:id="@+id/contacttv"
                style="@style/logged_nav_drawer_menu_item"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/contact" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:text="©balancever"
            android:textColor="@color/white" />
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>